# glucose

./: .gitignore  CHANGELOG  CMakeLists.txt  README.md  meson.build
.github/workflows/: build.yml
capi/: cglucose.cc  cglucose.h
core/: BoundedQueue.h  Dimacs.h  Solver.cc  Solver.h  SolverStats.h  SolverTypes.h  lcm.cc
mtl/: Alg.h  Alloc.h  Clone.h  Heap.h  Map.h  Queue.h  Sort.h  VecThreads.h  XAlloc.h
parallel/: ClausesBuffer.cc  ClausesBuffer.h  Main.cc  MultiSolvers.cc  MultiSolvers.h  ParallelSolver.cc  ParallelSolver.h  SharedCompanion.cc  SharedCompanion.h  SolverCompanion.cc  SolverCompanion.h  SolverConfiguration.cc  SolverConfiguration.h
simp/: Main.cc  SimpSolver.cc  SimpSolver.h
utils/: Options.cc  Options.h  ParseUtils.h  System.cc  System.h
